[package]
name = "yd_tools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-always-on-top", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-minimize", "window-show", "window-maximize", "window-hide", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
hl7-mllp-codec = "0.4.0"
bytes = "1.5.0"
tokio-util = "0.7.10"
futures = "0.3.30"
rust-hl7 = "0.5.0"
chrono = "0.4.33"

reqwest = "0.11.23"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
