[package]
name = "yd_tools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "api-all"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
hl7-mllp-codec = "0.4.0"
bytes = "1.5.0"
tokio-util = "0.7.10"
futures = "0.3.30"
rust-hl7 = "0.5.0"
chrono = "0.4.35"

reqwest = "0.11.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
